Refactoring in preparation for Java 9. Refactor to avoid using some methods that will be deprecated in Java 9 onwards.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc7.0.x/trunk@1810575 13f79535-47bb-0310-9956-ffa450edef68